# synapse-pangea-chat

./: .gitignore  .gitlab-ci.yml  .python-version  CLAUDE.md  COMPAT.yml  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: assign-room-membership.instructions.md  create-course-space.instructions.md  delayed-push.instructions.md  delete-user-export-user-data.instructions.md  (+12 more)
.plans/: fix-issue-90.md
scripts/: audit_course_l2.py
scripts-dev/: lint.sh
synapse_pangea_chat/: __init__.py  __main__.py  config.py  get_public_courses.py  public_courses.py  unassign_activity_role_on_leave.py
tests/: __init__.py  base_e2e.py  mock_cms_server.py  test_admin_code_e2e.py  test_assign_room_membership_e2e.py  test_auto_accept_invite_e2e.py  test_base_e2e_resource_warnings.py  test_course_metadata_cache.py  test_course_plan_l2_lookup_unit.py  test_create_course_space_e2e.py  test_create_course_space_unit.py  test_delayed_push_unit.py  test_delete_room_e2e.py  test_delete_user_e2e.py  test_delete_user_unit.py  test_direct_message_e2e.py  test_direct_message_unit.py  test_direct_push_e2e.py  test_direct_push_unit.py  test_e2e.py  test_export_user_data_e2e.py  test_export_user_data_unit.py  test_get_public_courses.py  test_get_public_courses_pagination.py  test_grant_instructor_analytics_access_e2e.py  test_limit_user_directory_e2e.py  test_limit_user_directory_unit.py  test_preview_with_code_e2e.py  test_public_courses_backfill_l2_unit.py  test_public_courses_language_filter_e2e.py  test_register_email_e2e.py  test_request_auto_join_e2e.py  test_room_code_e2e.py  test_room_preview_e2e.py  test_room_preview_reactive_cache.py  test_user_activity_config.py  test_user_activity_e2e.py  test_user_directory_search_e2e.py
(+89 files in other folders)
